Fix jumping elements in navbar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -41,6 +41,7 @@
 }
 
 .navbar-fixed-top {
+  transform : translate3d(0, 0, 0);
   position: fixed;
   top: 0;
   left: 0;
@@ -49,6 +50,7 @@
 }
 
 .navbar-fixed-bottom {
+  transform : translate3d(0, 0, 0);
   position: fixed;
   bottom: 0;
   left: 0;
